# rusty-chess

./: .gitignore  Cargo.toml  README.md  run.sh
backend/: Cargo.toml
backend/src/: .game.rs.swp  .main.rs.swp  game.rs  lobby.rs  main.rs  msg.rs  player.rs
frontend/: Cargo.toml  index.html  index.js
frontend/src/: lib.rs
frontend/static/: wasm_bg.wasm  wasm_bg.wasm.d.ts
message/: Cargo.toml
msg/: Cargo.toml
msg/src/: lib.rs
src/: .game.rs.swp  .lobby.rs.swp  .player.rs.swp  chess.rs  game.rs  lobby.rs  main.rs  msg.rs  player.rs  ¨
static/: index.html  wasm.d.ts  wasm.js  wasm_bg.wasm
www/: game.html
www2/game/: index.html
