[package]
name = "warptest"
version = "0.1.0"
authors = ["Felix Risbro Hjerrild <felix@hjerrild.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.3"
warp = "0.3"
futures = "0.3"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chess = "*"
